@@ -21,7 +21,8 @@ plan("tests" => (
          + 8              # Instantiation, method, and initialization tests
          + 2              # String representation method tests
          + 1              # get_hash() method tests
-         + 0              # get()/set() member tests
+         + 29             # get()/set() method tests
+         + 5+5+3+3+7+7+3  # add()/del() method tests
 ));
 
 my ($obj1, $obj2, $obj3);
@@ -33,7 +34,7 @@ $obj1->init("name" => "me");
 can_ok($obj1, @methods);
 
 $obj2 = new_ok($modname, [], "Instantiate Object 2 (no args)");
-$obj2->set("name" => "me");
+$obj2->set("name", "me");
 
 $obj3 = new_ok($modname, [ "name" => "me" ], "Instantiate Object 3 (with args)");
 
@@ -61,5 +62,126 @@ $href = $obj1->get_hash();
 is_deeply($href, { "NAME" => "me" }, "get_hash() returns correct data");
 
 #######################################
-### get()/set() member tests
+### get()/set() method tests
 #######################################
+my $test_scalar = "test";
+my @test_array = ("interfaces", "eth0", "eth1", "eth2", "eth3");
+my %test_hash = ( "NAME" => "Bob", "ADDRESS" => "Elsewhere", "PHONE" => "1-800-222-3334" );
+my %test_complex = (
+    "name" => "n0000",
+    "groups" => [ "group1", "group2", "group3" ],
+    "devices" => {
+        "eth0" => "10.0.0.0",
+        "eth1" => "10.1.0.0",
+        "eth2" => "10.2.0.0"
+    }
+);
+my @tmp = @test_array;
+my $fh;
+
+# Simple sanity checks
+ok(!defined($obj1->set()), "set() with no key returns undef");
+ok(!defined($obj1->set("name")), "set() with only a key returns undef");
+
+# set() with a hash reference
+is($obj1->set(\%test_hash), \%test_hash, "set() with a hashref succeeds and returns the hashref");
+is($obj1->get("name"), "Bob", "get() returns correct member value for \"name\"");
+is($obj1->get("address"), "Elsewhere", "get() returns correct member value for \"address\"");
+is($obj1->get("phone"), "1-800-222-3334", "get() returns correct member value for \"phone\"");
+is_deeply(scalar($obj1->get_hash()), \%test_hash, "get_hash() returns accurate representation of object");
+
+# set() with an array (key and values)
+shift @tmp;
+$obj1->init();
+is($obj1->set(@test_array), 4, "set() with an array returns the number of items set");
+is_deeply(scalar($obj1->get("interfaces")), \@tmp, "get() returns the correct data");
+
+# set() with an array reference
+$obj1->init();
+is($obj1->set(\@test_array), 4, "set() with an array reference works just like an array");
+isnt($obj1->get("interfaces"), \@test_array, "get() does NOT return the original array reference");
+is_deeply(scalar($obj1->get("interfaces")), \@tmp, "get() returns the correct data");
+
+# set() with a complex, hashref-based data structure
+is($obj1->init(\%test_complex), $obj1, "init() with complex hashref returns the object");
+is($obj1->get("name"), $test_complex{"name"}, "Complex object set test -- scalar value");
+isnt(scalar($obj1->get("groups")), $test_complex{"groups"}, "Complex object set test -- arrayref set by value");
+is_deeply(scalar($obj1->get("groups")), $test_complex{"groups"}, "Complex object set test -- array");
+isnt(scalar($obj1->get("devices")), $test_complex{"devices"}, "Complex object set test -- hashref set by value");
+is_deeply(scalar($obj1->get("devices")), $test_complex{"devices"}, "Complex object set test -- hash");
+
+# Any other reference should be an error
+ok(!defined($obj1->set(sub { 1 })), "obj->set(<coderef>) returns undef");
+open($fh, '+>', undef);
+ok(!defined($obj1->set($fh)), "obj->set(<globref>) returns undef");
+close($fh);
+ok(!defined($obj1->set(\$test_scalar)), "obj->set(<scalarref>) returns undef");
+
+# Checks for invalid input
+ok(!defined($obj1->set("devices", undef)), "obj->set(\"key\", undef) returns undef");
+ok(!defined($obj1->get("devices")), "obj->set(\"key\", undef) removes the member variable");
+is($obj1->get("name"), $test_complex{"name"}, "obj->set(\"key\", undef) leaves other members intact");
+is_deeply(scalar($obj1->get("groups")), $test_complex{"groups"}, "obj->set(\"key\", undef) leaves other members intact");
+
+# Make sure simple key/value pairs work correctly.
+is($obj1->set("name", "n0001"), "n0001", "obj->set(\"key\", \"value\") returns \"value\"");
+is($obj1->get("name"), "n0001", "obj->set(\"key\", \"value\") changes member \"key\" to \"value\"");
+
+# Append an item by setting the value to the previous value plus the new one.
+push(@{$test_complex{"groups"}}, $test_scalar);
+is(scalar($obj1->set("groups", $obj1->get("groups"), $test_scalar)), scalar(@{$test_complex{"groups"}}),
+   "Object member list append using set/get returns new value count");
+is_deeply(scalar($obj1->get("groups")), $test_complex{"groups"}, "Object member list append using set/get works");
+
+#######################################
+### add()/del() method tests
+#######################################
+my @test_list = (0, 1, 2, 3, 4);
+
+$obj1->init();
+is(scalar($obj1->add("stuff", @test_list)), scalar(@test_list), "obj->add(\"key\", <list>) returns correctly");
+is_deeply(scalar($obj1->get("stuff")), \@test_list, "obj->add(\"key\", <list>) works correctly");
+is(scalar($obj1->del("stuff", @test_list)), 0, "obj->del(\"key\", <list>) purges the object member completely");
+ok(!defined($obj1->get("stuff")), "obj->del(\"key\", <list>) works correctly");
+is_deeply($obj1, {}, "Object is fully purged");
+
+is(scalar($obj1->add("stuff", $test_list[$#test_list])), 1, "obj->add(\"key\", <item>) returns correctly");
+is_deeply(scalar($obj1->get("stuff")), [ $test_list[$#test_list] ], "obj->add() creates an array, even for a single item");
+is(scalar($obj1->del("stuff", $test_list[$#test_list])), 0, "obj->del(\"key\", <item>) purges the object member completely");
+ok(!defined($obj1->get("stuff")), "obj->del(\"key\", <item>) works correctly");
+is_deeply($obj1, {}, "Object is fully purged");
+
+$obj1->init("stuff", @test_list);
+is(scalar($obj1->del("stuff", reverse(@test_list))), 0, "obj->del(\"key\", <reversed list>) purges the object member completely");
+ok(!defined($obj1->get("stuff")), "obj->del(\"key\", <list>) works correctly");
+is_deeply($obj1, {}, "Object is fully purged");
+
+$obj1->init("stuff", sort { rand(2) - 1; } @test_list);
+is(scalar($obj1->del("stuff", sort { rand(2) - 1; } @test_list)), 0,
+   "obj->del(\"key\", <randomized list>) purges the object member completely");
+ok(!defined($obj1->get("stuff")), "obj->del(\"key\", <list>) works correctly");
+is_deeply($obj1, {}, "Object is fully purged");
+
+$obj1->init();
+ok(!defined(scalar($obj1->add())), "obj->add() returns undef");
+ok(!defined(scalar($obj1->del())), "obj->del() returns undef");
+is(scalar($obj1->add("stuff")), 0, "obj->add(\"key\") creates an empty member variable");
+ok(defined($obj1->get("stuff")), "obj->add(\"key\") works correctly");
+is_deeply(scalar($obj1->get("stuff")), [], "obj->add(\"key\") created the empty member variable");
+is(scalar($obj1->del("stuff")), 0, "obj->del(\"key\") has removed the empty member variable");
+is(scalar($obj1->del("moo")), 0, "obj->del(\"bad key\") returns empty list");
+
+$obj1->init("stuff" => 1);
+is(scalar($obj1->add("stuff", 2, 3, 4)), 4, "obj->add(\"oldkey\", <list>) properly converts a single-value member to a list");
+is_deeply(scalar($obj1->get("stuff")), [ 1, 2, 3, 4 ], "obj->add(\"oldkey\", <list>) appends new values correctly");
+is(scalar($obj1->add("stuff", 3, 4, 1, 2)), 4, "obj->add(\"oldkey\", <dupes>) properly ignores duplicate values");
+is_deeply(scalar($obj1->get("stuff")), [ 1, 2, 3, 4 ], "obj->add(\"oldkey\", <dupes>) does not change the member variable");
+is(scalar($obj1->add("stuff", @test_list)), scalar(@test_list), "obj->add(\"oldkey\", <some dupes>) filters duplicates");
+is_deeply(scalar(@{scalar($obj1->get("stuff"))}), scalar(@test_list), "obj->add(\"oldkey\", <some dupes>) merges correctly");
+is(scalar($obj1->del("stuff", $test_list[$#test_list])), $#test_list,
+   "obj->del(\"key\", <item>) removes an item and leaves the rest");
+
+$obj1->init("stuff" => 5);
+is_deeply($obj1->get("stuff"), 5, "Before obj->del(), we have a scalar");
+is(scalar($obj1->del("stuff", 2)), 1, "obj->del(\"key\", <nonexistent item>) still has a single value");
+is_deeply(scalar($obj1->get("stuff")), [ 5 ], "But now it's an array");
